--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Playlister</title>
   </head>
 
   <body>
     <%= yield %>
+    <a href="/">Home</a>
   </body>
 </html>
