--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -1,11 +1,16 @@
+<h2>Artist Name: <%= @artist.name %></h2>
+
+<h4>Songs by this artist</h4>
 <ul>
   <% @artist.songs.each do |song| %>
     <li><a href="/songs/<%= song.slug %>"><%= song.name %> </a></li>
   <% end %>
 </ul>
 
+<h4>Genres that songs by this artist belong to</h4>
 <ul>
   <% @artist.genres.each do |genre| %>
     <li><a href="/genres/<%= genre.slug %>"><%= genre.name %> </a></li>
   <% end %>
 </ul>
+
