--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -1,8 +1,13 @@
+<h2>Genre Name: <%=@genre.name%></h2>
+
+<h4>The songs of this genre:</h4>
 <ul>
   <% @genre.songs.each do |song| %>
     <li><a href="/songs/<%= song.slug %>"><%= song.name %> </a></li>
   <% end %>
 </ul>
+
+<h4>The artists of this genre:</h4>
 
 <ul>
   <% @genre.artists.each do |artist| %>
