--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,17 +1,18 @@
   
-<h1>Add a New Song</h1>
+<h2>Add a New Song</h2>
 
 <form action="/songs" method="POST">
-  <label for="artist_name">Artist Name</label>
+  <label for="artist_name">Artist Name:</label>
   <input type="text" name="artist[name]" id="artist_name"> </br>
-
+<br>
   <label for="name">Name</label>
   <input type="text" name="song[name]" id="name"> </br>
-
-  <label> Genres </label>
+  <br>
+  <label> Genres: </label>
+  <ul>
   <% Genre.all.each do |genre| %>
-    <input id="<%= genre.name %>" type="checkbox" name="genres[]" value="<%= genre.id %>">
+    <li><input id="<%= genre.name %>" type="checkbox" name="genres[]" value="<%= genre.id %>"><%=genre.name%></li>
   <% end %>
-
+</ul>
   <input type="submit" value="Create">
 </form>
