--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,8 +1,14 @@
+
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h1><%= @song.name %></h1>
 
 <p><h3>Artist name : </h3>
 <a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a><br>
 </p>
+
 
 <div><h3>Genres: </h3>
 <%@song.genres.each do |genre|%>
