--- a/app/views/artist/index.erb
+++ b/app/views/artist/index.erb
@@ -1,5 +1,9 @@
 <h3>These are all the artists currently in your playister:</h3>
 
 <% @artists.each do |artist| %>
-  <li> <a href="/artists/<%= artist.slug %>"> <%= artist.name %> </a></li>
+  <li><a href="/artists/<%= artist.slug %>"> <%= artist.name %></a></li>
+<% end %>
+
+<% @genres.each do |genre| %>
+  <li><a href="/genres/<%= genre.slug %>"> <%= genre.name %></a></li>
 <% end %>
